--- a/dom/desafio-01/index.html
+++ b/dom/desafio-01/index.html
@@ -19,7 +19,7 @@
     
     <!-- 5) Inicialize o input com o seu nome (use o atributo "value") -->
     <div>
-        <input type="text" v-model="name">
+        <input type="text" v-on:input="alterarNome">
     </div>
 </div>
 <script src="app.js"></script>
