--- a/introducao/primeira-app-v2.html
+++ b/introducao/primeira-app-v2.html
@@ -1,7 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 <div id="app">
-    <input type="text" v-model="titulo">
+    <input type="text" v-on:input="titulo">
     <p>{{ titulo }}</p>
 </div>
 
@@ -12,7 +12,7 @@
         data: {
             titulo: 'Usando VueJS 2!'
         },
-        mothods: {
+        methods: {
             alterarTitulo(event) {
                 this.titulo = event.target.value
             }
